--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.4.15",
     "@prisma/client": "^6.0.1",
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.0",
+    "rotating-file-stream": "^3.2.5",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
